spacing fixes

--- a/styles/about.css
+++ b/styles/about.css
@@ -3,6 +3,12 @@
   width: auto;
 }
 
+
+
+.contactIcon{
+  margin-bottom: 16px;
+}
+
 .site-footer
 {
   background-color:#26272b;
